[project]
name = "semi-photo-utils"
version = "2.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "flask>=3.1.2",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pillow>=12.1.0",
    "pillow-heif>=1.1.1",
    "pystray>=0.19.5",
]

[tool.poetry.dependencies]
python = "^3.13"